[package]
name = "bevy-orbit-controls"
version = "1.0.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "ISC"
edition = "2018"
repository = "https://github.com/Counterproduction-game/Counterproduction"

[lib]
name = "bevy_orbit_controls"

[[test]]
name = "test"
path = "test/main.rs"
harness = false
test = false

[dependencies]
bevy = "0.4.0"