[package]
name = "counterproduction"
version = "1.0.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "GPL-3.0-only"
build = "build.rs"
edition = "2018"
publish = false

[lib]
name = "counterproduction"

[dependencies]
enum_dispatch = "0.3.4"
parking_lot = { version = "0.11.0", features = ["nightly"] }
ref_clone = "0.8.0"
ultraviolet = { version = "0.7.5", features = ["int"] }
building-blocks =  { git = "https://github.com/iMplode-nZ/building-blocks.git", branch = "main" }
derive-new = "0.5.8"
either = "1.6.1"
fnv = "1.0.7"
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
