[package]
name = "counterproduction-core"
version = "1.0.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "GPL-3.0-only"
edition = "2018"
publish = false
repository = "https://github.com/Counterproduction-game/Counterproduction"

[lib]
name = "counterproduction_core"

[dependencies]
ultraviolet = { version = "0.7.5", features = ["int"] }
building-blocks =  { git = "https://github.com/iMplode-nZ/building-blocks.git", branch = "main" }
derive-new = "0.5.8"
take_mut = "0.2.2"
[dependencies.bevy]
version = "0.4.0"
default-features = false
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
