[package]
name = "octree-collisions-renderer"
version = "1.0.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "GPL-3.0-only"
edition = "2018"
publish = false
repository = "https://github.com/Counterproduction-game/Counterproduction"

[dependencies]
ultraviolet = { version = "0.7.5", features = ["int"] }
building-blocks =  { git = "https://github.com/iMplode-nZ/building-blocks.git", branch = "main" }
bevy = "0.4.0"
bevy-orbit-controls = { path = "../bevy-orbit-controls"}
enum_dispatch = "0.3.4"
counterproduction-core = { path = "../core" }
