[package]
name = "autofactory-prototype"
version = "1.0.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "GPL-3.0-only"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
publish = false

[lib]
name = "autofactory_prototype"

[dependencies]
derive-new = "0.5.8"
ultraviolet = { version = "0.7.4", features = [ "f64", "int" ] }
[dependencies.bevy]
git = "https://github.com/bevyengine/bevy"
