[package]
name = "counterproduction-prototype"
version = "1.0.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "GPL-3.0-only"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]
publish = false

[dependencies]
derive-new = "0.5.8"
rand = "0.7.3"
bevy_mod_picking = "0.2.0"
[dependencies.bevy]
# git = "https://github.com/bevyengine/bevy"
version = "0.3.0"
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
