[package]
name = "type-record"
version = "1.0.1"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "ISC"
edition = "2018"
description = "A type-level record (see documentation for details)."
repository = "https://github.com/Counterproduction-game/Counterproduction"
[lib]
name = "type_record"

[dependencies]
