[package]
name = "wgpu-test"
version = "1.0.0"
authors = ["iMplode nZ <rg@youxplode.com>"]
license = "GPL-3.0-only"
edition = "2018"
publish = false
repository = "https://github.com/Counterproduction-game/Counterproduction"

# [lib]
# name = "counterproduction_render"

[dependencies]
bevy = "0.4.0"
shaderc = "0.7.0"
wgpu = "0.6.2"
[dev-dependencies.cargo-husky]
version = "1.5.0"
default-features = false
features = ["precommit-hook", "run-cargo-clippy", "run-cargo-fmt"]
